force-app/main/default/objects/Exclusive_Experience__c/Exclusive_Experience__c.object-meta.xml
<CustomObject>
    <description>Contains targeted client lists for special sales</description>
    <label>Exclusive Experience</label>
    <nameField>
        <displayFormat>XXPR-{0000000}</displayFormat>
        <label>Exclusive Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusive Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>