force-app/main/default/objects/Exclusive_Experience__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exclusive Experiences</relationshipLabel>
    <relationshipName>Exclusive_Experiences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>