force-app/main/default/objects/Exclusive_Experience__c/fields/Dream_Id__c.field-meta.xml
<CustomField>
    <fullName>Dream_Id__c</fullName>
    <label>Dream Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>