force-app/main/default/objects/Exclusive_Experience__c/fields/Mylv_Url_Short__c.field-meta.xml
<CustomField>
    <fullName>Mylv_Url_Short__c</fullName>
    <description>short url generated for the notification with Akamai</description>
    <label>MyLV url short</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>