force-app/main/default/objects/Exclusive_Experience__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>