force-app/main/default/objects/Exclusive_Experience__c/fields/Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code__c</fullName>
    <label>Offer Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Typology__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>XXPR_Offer_Code</valueSetName>
    </valueSet>
</CustomField>