force-app/main/default/objects/Exclusive_Experience__c/fields/TECH_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>TECH_UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>TECH_UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>