force-app/main/default/objects/Exclusive_Experience__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <label>Typology</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>XXPR_Typology</valueSetName>
    </valueSet>
</CustomField>